# flight_tracker

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_auth.sql
backend/src/: auth.rs  db.rs  email.rs  main.rs  models.rs
backend/src/poller/: mod.rs  price_fetcher.rs
backend/src/poller/providers/: kiwi.rs  mock.rs  mod.rs
backend/src/routes/: alerts.rs  auth.rs  mod.rs  sse.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AlertCard.tsx  AlertForm.tsx  AlertList.tsx  LoginForm.tsx
frontend/hooks/: useAlerts.ts  useAuth.ts  useSSE.ts
frontend/lib/: api.ts  types.ts
